- Fixed interaction with File and Printer Sharing and network browsing
- Connections windows need not be open to register blocked applications
- Reduced number of failed whitelisting cases
- Install location can now be customized
- Add warning about remote installations to installer
- Modernized installer look
- Add port scan protection
- Raw socket and promiscuous mode rights management
- Fix: Don't leave locked files on service exit

---------------------

2.1.11 - Maintenance release (28.07.2019.)
- Fix service hang on some systems when blocklists are enabled
- Fix service hang on some systems when opening Connections window

---------------------

2.1.10 - Maintenance release (19.07.2019.)
- Fix accidentally introduced dependency on .Net 4.8

---------------------

2.1.9 - Maintenance release (18.07.2019.)
- Add support for Windows 10 v1903
- Add drag&drop whitelist support to applications in settings window
- Fix: Online updates not supporting TLS >= 1.2
- Updated application database
- Updated hosts blocklist

---------------------

2.1.8 - Maintenance release (10.03.2016.)
- Fix: Potential GUI crash when whitelisting by window
- Fix: GUI crash if copying to clipboard which is in use by another app
- Fix: Connections form GUI scaling issue in German localization
- Workaround for performance issue in Windows 10
- Atomic file updates to reduce chance of lost settings in case of file system corruptions
- Handle some more possible errors on uninstallation
- Add Czech localization, and Spanish update

---------------------

2.1.7 - Maintenance release (04.01.2016.)
- Fix: GUI freezes if Application Finder is closed while scan is running
- Fix: GUI is blurry if desktop scaling is enabled
- Add Polish and Turkish localizations
- Updates to Spanish, French, and Brazilian Portuguese translations
- Application database updates

---------------------

2.1.6 - Maintenance release (06.01.2015.)
- Windows 10 (TP) compatibility